tests/fail/lists_index_out_of_bounds.kr
# Test: List index out of bounds
# Expected: Fail with "List index out of bounds"

set items to list 1, 2, 3
set invalid to items at 10

